--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 	Department "Information and intellectual property"
 	faculty "Computer and information technology" National technical university "Kharkiv Polytechnical Institute"
 	</div>
+	    <p> This is new line</p>
     </body>
 </html>
